@startuml bdd_io

package "io" {
  abstract class Coordinates
  class CartesianCoordinates
  abstract class BasisSet
  class Pople
  class InputData
}

' ═══ Generalization ═══

CartesianCoordinates -up-|> Coordinates
Pople -up-|> BasisSet

' ═══ Use ═══

InputData ..> CartesianCoordinates : «use»

@enduml
